@@ -131,6 +131,12 @@
     <cvs-branch>HEAD</cvs-branch>
   </module>
 
+  <module id="gnome-accessibility-guide">
+    <cvs-directory>gnome-user-docs/gnome2-accessibility-guide</cvs-directory>
+    <cvs-branch>HEAD</cvs-branch>
+  </module>
+
+
   <module id="gnome-control-center">
     <cvs-directory>gnome-control-center/help</cvs-directory>
     <cvs-branch>HEAD</cvs-branch>
@@ -147,6 +153,11 @@
 
   <module id="gnome-schedule">
     <cvs-directory>gnome-schedule/help</cvs-directory>
+  </module>
+
+  <module id="gnome-system-admin-guide">
+    <cvs-directory>gnome-user-docs/gnome2-system-admin-guide</cvs-directory>
+    <cvs-branch>HEAD</cvs-branch>
   </module>
 
   <module id="gnome-system-tools-boot">
