@@ -1,5 +1,9 @@
 2006-02-27  Danilo Šegan  <danilo@gnome.org>
 
+	* modules.xml: Added accessibility and system-admin guides.
+
+2006-02-27  Danilo Šegan  <danilo@gnome.org>
+
 	* modules.xml: Added rhythmbox, just to beat vuntz to it.
 
 2006-02-23  Danilo Šegan  <danilo@gnome.org>
